--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,16 +134,17 @@ header h1 {
 	margin-left: 7.5%;
 	z-index: 2000;
 	left: 0;
-	top: 70%;
+	top: 65%;
 }
 
 h3 {
 	text-align: center;
 	color: white;
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-family: 'Amatic SC', cursive;
 	width: 33%;
 	z-index: 20000;
+	text-shadow: 1px 1px rgb(0,0,0);
 }
 
 /* FOOTER */
@@ -179,19 +180,55 @@ footer p {
 
 
 /* BREAKING POINTS */
+@media only screen and (max-width: 1500px) {
+	h3 {
+		font-size: 2rem;
+	}
+}
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
 	h3 {
 		font-size: 1.5rem;
 	}
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
+	.projects {
+		flex-direction: column;
+		justify-content: center;
+		padding-left: 10%;
+		width: 85%;
+	}
+
+	.textwrapper {
+		flex-direction: column;
+		justify-content: center;
+		padding-left: 10%;
+		top: 0;
+		width: 85%;
+	}
+
+	.img {
+		width: 75%;
+		margin-bottom: 1%;
+	}
+
 	h3 {
-		font-size: 1.2rem;
-		width: 32.9%;
+		font-size: 2rem;
+		width: 75%;
+		padding-top: 45%;
 	}
 }
+
+@media only screen and (max-width: 840px) {
+	h3 {
+		font-size: 2rem;
+		width: 75%;
+		padding-top: 42%;
+	}
+}
+
+
 
 @media only screen and (max-width: 720px) {
 	header h1 {
@@ -211,21 +248,8 @@ footer p {
 		font-size: 1.1rem;
 	}
 
-	.column {
-  		float: left;
-  		width: 100%;
-  		padding: 0.1%;
-	}
-
-	.row::after {
- 		content: "";
-  		clear: both;
-  		display: block;
-	}
-
 	h3 {
-		display: block;
-		position: absolute;
+		padding-top: 39%;
 	}
 }
 
@@ -233,6 +257,11 @@ footer p {
 	header h1 {
 		font-size: 5rem;
 		border: none;
+	}
+
+	h3 {
+		font-size: 1.5rem;
+		padding-top: 40%;
 	}
 }
 
