--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,6 +40,7 @@ header h1 {
 	z-index: 10000;
 }
 
+
 .navigation nav {
 	list-style-type: none;
 	font-family: 'Amatic SC', bold;
@@ -77,34 +78,35 @@ header h1 {
 	width: 90%;
 	margin-right: 5%;
 	margin-left: 5%;
-	margin-bottom: 2.5%;
+	padding-bottom: 25%;
+	display: inline-flex;
+	justify-content: space-around;
+	position: relative;
+	align-items: center;
+	padding-top: 5%;
 }
 
 .me {
 	border-radius: 50%;
-	width: 30%;
+	width: 28%;
 	height: auto;
-	display: inline-block;
-	position: relative;
-	margin-top: 5%;
-	left: 5%;
+	margin-left: 2%;
+	min-width: 25%;
 }
 
 .introtext {
-	display: inline-block;
-	position: relative;
 	width: 55%;
-	margin: 0 auto;
-	padding-bottom: 30%;
+	margin: 0;
 	font-family: sans-serif;
 	text-align: justify;
-	transform: translate(15%, -10%)
+	margin-right: 2%;
 }
 
 .introduction h2 {
 	font-family: 'Amatic SC', cursive;
 	color: DarkCyan;
 	font-size: 4rem;
+	margin: 0;
 }
 
 /* PROJECT IMAGES */
@@ -134,16 +136,17 @@ header h1 {
 	margin-left: 7.5%;
 	z-index: 2000;
 	left: 0;
-	top: 70%;
+	top: 65%;
 }
 
 h3 {
 	text-align: center;
 	color: white;
-	font-size: 2rem;
+	font-size: 2.5rem;
 	font-family: 'Amatic SC', cursive;
 	width: 33%;
 	z-index: 20000;
+	text-shadow: 1px 1px rgb(0,0,0);
 }
 
 /* FOOTER */
@@ -179,26 +182,83 @@ footer p {
 
 
 /* BREAKING POINTS */
+@media only screen and (max-width: 1500px) {
+	h3 {
+		font-size: 2rem;
+	}
+}
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1200px) {
 	h3 {
 		font-size: 1.5rem;
 	}
-}
 
-@media only screen and (max-width: 900px) {
-	h3 {
-		font-size: 1.2rem;
-		width: 32.9%;
+	.background {
+		flex-direction: column;
+	}
+
+	.me {
+		padding: 0;
+		margin-bottom: 5%;
+		width: 30%;
+	}
+
+	.introduction h2 {
+		text-align: center;
 	}
 }
+
+@media only screen and (max-width: 1000px) {
+	.projects {
+		flex-direction: column;
+		justify-content: center;
+		padding-left: 10%;
+		width: 85%;
+	}
+
+	.textwrapper {
+		flex-direction: column;
+		justify-content: center;
+		padding-left: 10%;
+		top: 0;
+		width: 85%;
+	}
+
+	.img {
+		width: 75%;
+		margin-bottom: 1%;
+	}
+
+	h3 {
+		font-size: 2rem;
+		width: 75%;
+		padding-top: 45%;
+	}
+
+	.me {
+		width: 45%;
+	}
+}
+
+@media only screen and (max-width: 840px) {
+	h3 {
+		font-size: 2rem;
+		width: 75%;
+		padding-top: 42%;
+	}
+
+	.me {
+		width: 50%;
+	}
+}
+
+
 
 @media only screen and (max-width: 720px) {
 	header h1 {
 	font-size: 6rem;
 	border: none;
 	}
-
 
 	h4 {
 		padding-bottom: 1rem;
@@ -211,21 +271,12 @@ footer p {
 		font-size: 1.1rem;
 	}
 
-	.column {
-  		float: left;
-  		width: 100%;
-  		padding: 0.1%;
-	}
-
-	.row::after {
- 		content: "";
-  		clear: both;
-  		display: block;
-	}
-
 	h3 {
-		display: block;
-		position: absolute;
+		padding-top: 39%;
+	}
+
+	.introduction h2 {
+		font-size: 2.5rem;
 	}
 }
 
@@ -233,6 +284,11 @@ footer p {
 	header h1 {
 		font-size: 5rem;
 		border: none;
+	}
+
+	h3 {
+		font-size: 1.5rem;
+		padding-top: 40%;
 	}
 }
 
